# blackjack_experiment

./: .gitignore  Dockerfile  README.md  demo_play.py  draw_hybrid_network.py  jimbo_the_gambling_bot.py  main.py  pyproject.toml  regenerate_gif.py  requirements.txt
.test_results/: test_analysis_10-Qubit_Network.json  test_analysis_6-Qubit_Network.json  test_analysis_8-Qubit_Network.json
blackjack_experiment/: __init__.py  config.py  run.py  simulator.py
blackjack_experiment/analysis/: __init__.py  capacity.py  comparison.py  gradient_flow.py  intermediate.py  learning.py  signal_noise.py  strategy.py  utils.py
blackjack_experiment/analysis/experiments/: __init__.py  bypass.py  qfirst.py
blackjack_experiment/cli/: __init__.py  bypass.py  compare.py  qfirst.py
blackjack_experiment/core/: __init__.py  agent.py  config.py  session.py  trainer.py
blackjack_experiment/networks/: __init__.py  base.py  classical.py  loader.py
blackjack_experiment/networks/hybrid/: README.md  __init__.py  compression.py  config.py  controls.py  encoder.py  policy.py  quantum.py  value.py
docs/: architecture.md
tests/: test_checkpoint_loading.py  test_encoder_compression.py  test_simulator_selector.py
