[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack_experiment"
version = "0.1.0"
description = "Hybrid Quantum-Classical RL Exploration in Blackjack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pennylane>=0.30.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "gymnasium[toy_text]>=0.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pygame>=2.5.0",
    "Pillow>=9.0.0",
]

[project.scripts]
blackjack = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blackjack_experiment*"]
